--- a/ios-developer.html
+++ b/ios-developer.html
@@ -60,7 +60,7 @@
 <p><span class="badge badge-light">Copenhagen</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co:443/8x8/bad3cd3c-71b5-4046-b90a-5b6a2d40d65b?utm_source=Twitter&utm_medium=social-media-organic&utm_campaign=employee_advocacy&lever_via=Cdrxoty0M_'>8x8 - Sr. iOS Mobile Developer</a></h5> 
+<h5><a href='https://jobs.lever.co:443/8x8/bad3cd3c-71b5-4046-b90a-5b6a2d40d65b?utm_source=Twitter&utm_medium=social-media-organic&utm_campaign=employee_advocacy&lever_via=Cdrxoty0M_'>8x8 - Sr. iOS Mobile Developer</a></h5> 
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -76,7 +76,7 @@
 <p><span class="badge badge-light">El Segundo, CA</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co:443/8x8/bad3cd3c-71b5-4046-b90a-5b6a2d40d65b?utm_source=Twitter&utm_medium=social-media-organic&utm_campaign=employee_advocacy&lever_via=6UIBJv1haZ'>8x8 - Sr. iOS Mobile Developer</a></h5> 
+<h5><a href='https://jobs.lever.co:443/8x8/bad3cd3c-71b5-4046-b90a-5b6a2d40d65b?utm_source=Twitter&utm_medium=social-media-organic&utm_campaign=employee_advocacy&lever_via=6UIBJv1haZ'>8x8 - Sr. iOS Mobile Developer</a></h5> 
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
@@ -131,7 +131,7 @@ building continuous integration pipelines; Demonstrable mastery in the?...</p>
 company behind the world's fastest payments processing network. We are a 
 vehicle?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Undabot/743999694809482-ios-developer'>Undabot iOS Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Undabot/743999694809482-ios-developer'>Undabot iOS Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
@@ -185,7 +185,7 @@ vehicle?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oEFYafwb&__jvst=Employee+Referral&__jvsd=sfrNBfwO&__jvsc=Twitter&bid=nEmecMwH'>ServiceNow Careers - Senior iOS Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oEFYafwb&__jvst=Employee+Referral&__jvsd=sfrNBfwO&__jvsc=Twitter&bid=nEmecMwH'>ServiceNow Careers - Senior iOS Developer</a></h5> 
 <p><span class="badge badge-light">Tel Aviv, Israel</span></p>
 <p>Posted on:: 2019-10-17</p>
 <hr/>
@@ -225,7 +225,7 @@ vehicle?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bdswiss.workable.com/j/7D4A039875'>BDSwiss - Jobs: iOS Mobile Developer - Apply online</a></h5> 
+<h5><a href='https://bdswiss.workable.com/j/7D4A039875'>BDSwiss - Jobs: iOS Mobile Developer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
@@ -277,7 +277,7 @@ vehicle?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-13</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://semios.workable.com/j/F6231B7519'>Semios - Jobs: Backend Application Developer (Node.js) - Apply online</a></h5> 
+<h5><a href='https://semios.workable.com/j/F6231B7519'>Semios - Jobs: Backend Application Developer (Node.js) - Apply online</a></h5> 
 <p><span class="badge badge-light">Vancouver, British Columbia Canada</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
@@ -297,7 +297,7 @@ vehicle?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Oct 1, 2019 ... Apply to Intermediate iOS Developer at TouchBistro in Toronto, Ontario, Canada.</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/careermovement/job/5ctnbkpzbq6prme669itsjpxyy'>iOS Developer | Career Movement</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/careermovement/job/5ctnbkpzbq6prme669itsjpxyy'>iOS Developer | Career Movement</a></h5> 
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -353,7 +353,7 @@ vehicle?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Sep 29, 2019 ... Apply to Senior iOS Developer at TouchBistro in Toronto, Ontario, Canada.</p>
 <hr/>
-<h5><a href='https://armut.applytojob.com/apply/Aj2VIj2bzZ/IOS-Developer'>iOS Developer - Armut Teknoloji AS - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://armut.applytojob.com/apply/Aj2VIj2bzZ/IOS-Developer'>iOS Developer - Armut Teknoloji AS - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Our purpose is to make it easy to find good quality, trusted providers by using 
 latest technologies and machine learning algorithms. We have served 5 million?...</p>
@@ -370,15 +370,15 @@ latest technologies and machine learning algorithms. We have served 5 million?..
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TridentConsultingInc2/743999696806846-ios-developer'>Trident Consulting Inc IOS developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/TridentConsultingInc2/743999696806846-ios-developer'>Trident Consulting Inc IOS developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ChewiCreative/743999695685808-senior-ios-developer'>Chewi Creative Senior iOS Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ChewiCreative/743999695685808-senior-ios-developer'>Chewi Creative Senior iOS Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/thetalentsourceinc/job/ftja6w5a6n1mwj5xshkuhdyshw'>iOS Developer  | Opportunity Portal</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/thetalentsourceinc/job/ftja6w5a6n1mwj5xshkuhdyshw'>iOS Developer  | Opportunity Portal</a></h5> 
 <p><span class="badge badge-light">Charlotte, NC</span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
