AWS/Cloud/DevOps Engineer - Orb IT People - Career Page. The Stars Group Careers - Graduate DevOps Engineer. The Stars Group Careers - Senior DevOps Engineer. Litera Microsystems Careers - DevOps Engineer. Job @ abcfinlab (Cologne): DevOps Engineer (m/w/x) | JOIN. Quadient Careers - Ingénieur Système DevOps. TitanData Inc. Technical Product Manager - Devops | SmartRecruiters. Axiom Zen - DevOps Engineer. KMS Technology FRESHER DEVOPS SOFTWARE ENGINEER | SmartRecruiters. Schneider Electric NAM Careers - Security Team Leader (Cloud, Big Data, DevOps, Risk Assurance). ServiceNow Careers - Technical Lead – DevOps. Ubisoft Cloud Administrator (Devops - Ubisoft Cloud) | SmartRecruiters. Ubisoft Administrateur Cloud (Devops - Cloud Ubisoft) | SmartRecruiters. Ubisoft Team Lead (Infrastructure/Operations/CICD/DevOps) | SmartRecruiters. SMARTWAVE Senior Consultant  - DevOps Architect | SmartRecruiters. Job Application for Sr. DevOps Engineer at Recursion Pharmaceuticals. CITECH Ingénieur DévOps H/F | SmartRecruiters. Magenic Careers - Senior DevOps Engineer- Chicago.       DevOps Team Lead - Qustodio     . Guidewire Software, Inc. Careers - Director of DevOps,  Risk Analytics - San Mateo, CA. Rackspace Careers - DevOps Consultant. Blue Wire Software Senior DevOps Engineer | SmartRecruiters. Job @ Shiji (Katowice): DevOps Engineer - Remote | JOIN. FiscalNote - Senior DevOps Engineer. iPresence: DevOps Engineer – Virtumente. Quadient Careers - Ingénieur Système DevOps. Job Application for DevOps Engineer at Cloudflare. J2 Global Careers - DevOPs Systems Administrator. Job @ SO1 (Remote): Junior DevOps Engineer (m/f/x)... | JOIN. Internet Brands Careers - DevOps Engineer - Avvo. Miratech Senior DevOps Engineer | SmartRecruiters. Guidewire Software, Inc. Careers - Director of DevOps,  Risk Analytics - San Mateo, CA. Rewards Network - DevOps and Cloud Engineer. Guidewire Software, Inc. Careers - Director of DevOps,  Risk Analytics - San Mateo, CA. Bey DevOps Engineer & Unix Admin

--- a/devops.html
+++ b/devops.html
@@ -38,6 +38,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://orbitpeople.applytojob.com/apply/oHWBYGP2jX/AWSCloudDevOps-Engineer'>AWS/Cloud/DevOps Engineer - Orb IT People - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
 <h5><a href='https://jobs.jobvite.com/stars-group/job/ogyrbfwa'>The Stars Group Careers - Graduate DevOps Engineer</a></h5> 
 <p><span class="badge badge-light">Leeds, United Kingdom</span></p>
 <p>Posted on: 2019-10-29</p>
@@ -90,7 +94,7 @@
 <p><span class="badge badge-light">Montreal, QCCanada  Montreal Montreal</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SMARTWAVE/743999698370199-senior-consultant-devops-architect'>SMARTWAVE Senior Consultant  - DevOps Architect | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/SMARTWAVE/743999698370199-senior-consultant-devops-architect'>SMARTWAVE Senior Consultant  - DevOps Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -98,7 +102,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CITECH/743999698364871-ingenieur-devops-h-f'>CITECH Ing?nieur D?vOps H/F | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CITECH/743999698364871-ingenieur-devops-h-f'>CITECH Ing?nieur D?vOps H/F | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -120,7 +124,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BlueWireSoftware/743999698356632-senior-devops-engineer'>Blue Wire Software Senior DevOps Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BlueWireSoftware/743999698356632-senior-devops-engineer'>Blue Wire Software Senior DevOps Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Cluj-Napoca, Romania</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -185,7 +189,7 @@ faster, more secure and privacy-centric public DNS resolver. This is available?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/punchh/jobs/4494241002'>Job Application for Senior Software Engineer (with DevOps experience) at Punchh</a></h5> 
+<h5><a href='https://boards.greenhouse.io/punchh/jobs/4494241002'>Job Application for Senior Software Engineer (with DevOps experience) at Punchh</a></h5> 
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -193,7 +197,7 @@ faster, more secure and privacy-centric public DNS resolver. This is available?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/paloaltonetworks/job/oPb1afwV'>Palo Alto Networks Careers - DevOps SRE Engineer (Information Security)</a></h5> 
+<h5><a href='https://jobs.jobvite.com/paloaltonetworks/job/oPb1afwV'>Palo Alto Networks Careers - DevOps SRE Engineer (Information Security)</a></h5> 
 <p><span class="badge badge-light">Palo Alto Palo Alto Tel Aviv, Israel  Palo Alto</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -241,7 +245,7 @@ faster, more secure and privacy-centric public DNS resolver. This is available?.
 <p><span class="badge badge-light">Boston</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/indigo/jobs/1931899'>Job Application for Senior Engineering Manager, DevOps at Indigo</a></h5> 
+<h5><a href='https://boards.greenhouse.io/indigo/jobs/1931899'>Job Application for Senior Engineering Manager, DevOps at Indigo</a></h5> 
 <p><span class="badge badge-light">Boston</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -289,7 +293,7 @@ faster, more secure and privacy-centric public DNS resolver. This is available?.
 <p><span class="badge badge-light">Australia  Australia</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999698241732-system-engineer-devops-senior-system-engineer-devops'>Netcentric System Engineer - DevOps: Senior System Engineer -DevOps | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999698241732-system-engineer-devops-senior-system-engineer-devops'>Netcentric System Engineer - DevOps: Senior System Engineer -DevOps | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Pune, Maharashtra, India</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -330,7 +334,7 @@ faster, more secure and privacy-centric public DNS resolver. This is available?.
 <p>Oct 16, 2019 ... Apply to Senior DevOps Engineer, R&D at Trulioo in Vancouver, British Columbia
 , Canada.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Omio1/743999697849180-devops-software-engineer'>Omio DevOps Software Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Omio1/743999697849180-devops-software-engineer'>Omio DevOps Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -424,7 +428,7 @@ of?...</p>
 <p><span class="badge badge-light">Curitiba</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/peak6/jobs/1930358'>Job Application for DevOps Engineer at PEAK6</a></h5> 
+<h5><a href='https://boards.greenhouse.io/peak6/jobs/1930358'>Job Application for DevOps Engineer at PEAK6</a></h5> 
 <p><span class="badge badge-light">Chicago, IL  ?  Chicago</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -447,10 +451,6 @@ of?...</p>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qdFaVfwH&k=Job&j=oyu3afwZ&__jvst=Referral&__jvsd=s2iKPhwF&__jvsc=Twitter&bid=nbsglMwv'>Rackspace Careers - Monitoring DevOps III-2</a></h5> 
 <p><span class="badge badge-light">Gurgaon, India</span></p>
 <p>Posted on:: 2019-10-26</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/nuorder/31f8f4fd-0a72-44ca-b621-7a05d4693d44'>NuORDER - Director of DevOps</a></h5> 
-<p><span class="badge badge-light">Los Angeles, CA</span></p>
-<p>Posted on: 2019-10-26</p>
 <hr/>
 
 
